--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-  "name": "signal",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+    "name": "signal",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web"
+    },
+    "dependencies": {
+        "@expo/webpack-config": "^0.17.2",
+        "@react-navigation/native": "^6.1.2",
+        "@react-navigation/native-stack": "^6.9.8",
+        "expo": "~47.0.12",
+        "expo-status-bar": "~1.4.2",
+        "expo-updates": "~0.15.6",
+        "firebase": "^9.16.0",
+        "nativewind": "^2.0.11",
+        "react": "18.1.0",
+        "react-dom": "18.1.0",
+        "react-native": "0.70.5",
+        "react-native-elements": "^3.4.3",
+        "react-native-safe-area-context": "4.4.1",
+        "react-native-screens": "~3.18.0",
+        "react-native-web": "~0.18.9"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9",
+        "tailwindcss": "^3.2.4"
+    },
+    "private": true
 }
