--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
         "@expo/webpack-config": "^0.17.2",
         "@react-navigation/native": "^6.1.2",
         "@react-navigation/native-stack": "^6.9.8",
+        "chalk": "^5.2.0",
         "expo": "~47.0.12",
+        "expo-blur": "~12.0.1",
+        "expo-image-picker": "~14.0.2",
         "expo-status-bar": "~1.4.2",
         "expo-updates": "~0.15.6",
         "firebase": "^9.16.0",
